# python-project-83

./: Makefile  README.md  database.sql  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
page_analyzer/: .env  app.py
page_analyzer/templates/: base.html  index.html  site.html  urls.html
